--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 NAME: David Piatt
 DATE: 2/19/17
 CLASS: CSE 2421 m/w 4:15 p
-TIME: I took 20 hours to finish this project. There were several little things that came up. I don't understand how hex representation works at the bit level very well and that wasted a lot of time. The xor and caesar files were easy enough to make, I was just stupid. I feel like I haven't tested for every possible case of user input but I have a midterm to study for tomorrow. 
+TIME: I took 20 hours to finish this project. 
 PROBLEMS: See time.
 I have neither given nor received assistance on this assignment
